// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering 1`] = `
Array [
  Object {
    "node": <p>
      Hello
    </p>,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "custom_profile_id": "11111",
              "message_data": Object {
                "attachment": undefined,
                "text": "Hello",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
  Object {
    "node": <p>
      World
    </p>,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "custom_profile_id": "11111",
              "message_data": Object {
                "attachment": undefined,
                "text": "World",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with media content 1`] = `
Array [
  Object {
    "node": <p>
      Hello
    </p>,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "custom_profile_id": undefined,
              "message_data": Object {
                "attachment": undefined,
                "text": "Hello",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
  Object {
    "node": <Photo
      shared={true}
      url="http://foo.bar/baz.png"
    />,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": Array [
        Object {
          "parameters": Object {
            "additional_owners": undefined,
            "media_category": "dm_image",
            "shared": "true",
          },
          "sourceType": "url",
          "type": "photo",
          "url": "http://foo.bar/baz.png",
        },
      ],
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "custom_profile_id": undefined,
              "message_data": Object {
                "attachment": Object {
                  "media": Object {
                    "id": "",
                  },
                  "type": "media",
                },
                "quick_reply": Object {
                  "options": Array [
                    Object {
                      "description": undefined,
                      "label": "foo",
                      "metadata": undefined,
                    },
                  ],
                  "type": "options",
                },
                "text": undefined,
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with quick replies 1`] = `
Array [
  Object {
    "node": <p>
      Hello World
    </p>,
    "path": "$#Expression.children:0",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "custom_profile_id": undefined,
              "message_data": Object {
                "attachment": undefined,
                "text": "Hello World",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
  Object {
    "node": <p>
      Choose One
    </p>,
    "path": "$#Expression.children:1",
    "type": "unit",
    "value": Object {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": Object {
        "href": "1.1/direct_messages/events/new.json",
        "method": "POST",
        "parameters": Object {
          "event": Object {
            "message_create": Object {
              "custom_profile_id": undefined,
              "message_data": Object {
                "attachment": undefined,
                "quick_reply": Object {
                  "options": Array [
                    Object {
                      "description": "FOOOOOOO",
                      "label": "foo",
                      "metadata": "FOO",
                    },
                    Object {
                      "description": "BAAAAAAR",
                      "label": "bar",
                      "metadata": "BAR",
                    },
                    Object {
                      "description": "BAAAAAAZ",
                      "label": "baz",
                      "metadata": "BAZ",
                    },
                  ],
                  "type": "options",
                },
                "text": "Choose One",
              },
              "target": Object {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
      },
      "type": "dm",
    },
  },
]
`;
